--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
             <input id="inputsuche" type="search" name="search" placeholder="Was möchten Sie finden?">
         </section>
         <section class="homeSlider">
-            <div class="swiper-container cf" style="width:2000px;">
-                <div class="swiper-wrapper cf">
+            <div class="swiper-container cf">
+                <div class="swiper-wrapper cf" >
                     <div class="swiper-slide">
                         <a href="pds.html">
                             <img src="http://www.jako-o.de/medias/sys_master/hbb/he8/8834552528926.jpg" />
