--- a/pds.html
+++ b/pds.html
@@ -141,7 +141,7 @@
                     </select>
                     <select name="color" required title="Wählen Sie eine Farbe aus">
                         <option value selected="selected">Farbe auswählen</option>
-                        <option value="1" disabled="disabled">Blau (lieferbar)</option>
+                        <option value="1" disabled="disabled">Blau (nicht lieferbar)</option>
                         <option value="2">Grün (lieferbar)</option>
                         <option value="3" disabled="disabled">Lila (nicht lieferbar)</option>
                     </select>
