--- a/pds.html
+++ b/pds.html
@@ -133,7 +133,7 @@
                     </div>
                 </section>
                 <section class="articledescription" placeholder="Größe auswählen">
-                    <h1>Kinder-Fleece-Jacke einzippbar VAUDE</h1>
+                    <h1>Kinder-Fleece-Jacke</h1>
                     <select name="size" required title="Wählen Sie eine Größe aus">
                         <option value selected="selected">Größe auswählen</option>
                         <option value="2">104/110 (lieferbar)</option>
