--- a/pue.html
+++ b/pue.html
@@ -323,7 +323,7 @@
                             <img src="http://www.jako-o.de/medias/sys_master/h8b/hf9/8834693562398.jpg" alt="">
                         </div>
                         <div class="produkt-bezeichnung">
-                            <p>Kinder-Fleece-Jacke einzippbar VAUDE</p>
+                            <p>Kinder-Fleece-Jacke</p>
                             <div class="price">59,95 €</div>
                         </div>
                     </a>
