--- a/merkzettel.html
+++ b/merkzettel.html
@@ -44,7 +44,7 @@
     <section class="checkout-01">
         <section class="product-container">            
             <div class="product-details">
-                <h2><a href="pds.html">Kinder-Fleece-Jacke einzippbar VAUDE</a></h2>
+                <h2><a href="pds.html">Kinder-Fleece-Jacke</a></h2>
                 <a href="pds.html"><img src="media/8800019808286.jpg" alt="Junge" width="100" height="100"></a>
                 <div class="checkout-details">
                     <ul>
