--- a/w3_bestellung_abschicken.html
+++ b/w3_bestellung_abschicken.html
@@ -105,7 +105,7 @@
         <section class="checkout-01">
             <section class="product-container">
                 <div class="product-details">
-                    <h2><a href="#">Kinder-Fleece-Jacke einzippbar VAUDE</a>
+                    <h2><a href="#">Kinder-Fleece-Jacke</a>
                     </h2>
                     <a href="#">
                         <img src="media/8800019808286.jpg" alt="Junge" width="100" height="100">
