--- a/checkout_payment.html
+++ b/checkout_payment.html
@@ -21,10 +21,10 @@
 <body>
 	<div class="advantages">
 		<ul class="site-wrapper container-fluid advantage-list row grid-around grid-middle">
-			<li><img src="/img/icon_done.svg" alt="Erledigt" width="18" height="18"> <span>Kein Mindestbestellwert</span></li>
-			<li><img src="/img/icon_done.svg" alt="Erledigt" width="18" height="18"> <span>Ersatzteilservice</span></li>
-			<li><img src="/img/icon_done.svg" alt="Erledigt" width="18" height="18"> <span>Kostenloses Rückgabrecht</span></li>
-			<li><img src="/img/icon_done.svg" alt="Erledigt" width="18" height="18"> <span>Sorgfältig getestete Ware</span></li>
+			<li><img src="img/icon_done.svg" alt="Erledigt" width="18" height="18"> <span>Kein Mindestbestellwert</span></li>
+			<li><img src="img/icon_done.svg" alt="Erledigt" width="18" height="18"> <span>Ersatzteilservice</span></li>
+			<li><img src="img/icon_done.svg" alt="Erledigt" width="18" height="18"> <span>Kostenloses Rückgabrecht</span></li>
+			<li><img src="img/icon_done.svg" alt="Erledigt" width="18" height="18"> <span>Sorgfältig getestete Ware</span></li>
 		</ul>
 	</div>
 
