--- a/checkout_login_3.html
+++ b/checkout_login_3.html
@@ -120,7 +120,7 @@
 	<div class="footer-short">
 		<div class="grid-center col-12">
 			<p>
-				<img src="/img/icon_ssl.svg" style="margin-top:-5px;" alt="SSL">
+				<img src="img/icon_ssl.svg" style="margin-top:-5px;" alt="SSL">
 				<small>Ihre Daten werden durch SSL-Verschlüsselung sicher übertragen.</small>
 			</p>
 		</div>
