--- a/checkout_login_2.html
+++ b/checkout_login_2.html
@@ -125,7 +125,7 @@
 				<div class="col-4">
 					<h4>Kundenservice:</h4>
 					<p>Montag bis Samstag von 8 bis 23 Uhr im hauseigenen Kunden-Service-Center in Bad Rodach!</p>
-					<p style="margin-top:1em;"><img src="/img/icon_phone.svg" alt="Phone"><strong>0 95 64 / 929 33 33</strong></p>
+					<p style="margin-top:1em;"><img src="img/icon_phone.svg" alt="Phone"><strong>0 95 64 / 929 33 33</strong></p>
 				</div>
 				<div class="col-4">
 					<h4>Bestell-Hinweise:</h4>
