--- a/index.html
+++ b/index.html
@@ -182,6 +182,10 @@
 				<a href="warenkorb.html" class="btn col-9">Warenkorb &rsaquo;</a>
 				<a href="warenkorb_banner.html" class="btn col-9">Warenkorb mit Banner &rsaquo;</a>
 				<a href="checkout_login.html" class="btn col-9">Login &rsaquo;</a>
+				<a href="checkout_login_1.html" class="btn col-9">Login &rsaquo;</a>
+				<a href="checkout_login_2.html" class="btn col-9">Login &rsaquo;</a>
+				<a href="checkout_login_3.html" class="btn col-9">Login &rsaquo;</a>
+				<a href="checkout_login_4.html" class="btn col-9">Login &rsaquo;</a>
 				<a href="checkout_payment.html" class="btn col-9">Zahlungsart &rsaquo;</a>
 			</div>
 		</div>
