--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@
 				<a href="checkout_login_2.html" class="btn col-9">Login &rsaquo;</a>
 				<a href="checkout_login_3.html" class="btn col-9">Login &rsaquo;</a>
 				<a href="checkout_login_4.html" class="btn col-9">Login &rsaquo;</a>
+				<a href="checkout_login_3spaltig.html" class="btn col-9">Login 3spaltig &rsaquo;</a>
 				<a href="checkout_payment.html" class="btn col-9">Zahlungsart &rsaquo;</a>
 			</div>
 		</div>
