--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
 		<!-- ENDE Breadcrumb -->
 		<style>
-			.index-overfiew  a {
+			.index-oferfiew  a {
 				margin:0.5rem;
 				display:block;
 			}
@@ -176,7 +176,7 @@
 			</div>
 		</div>
 
-		<div class="row index-overfiew">
+		<div class="row index-oferfiew">
 			<div class="col-6">
 				<h2>Warenkorb und Checkout</h2>
 				<a href="warenkorb.html" class="btn col-9">Warenkorb &rsaquo;</a>
@@ -188,6 +188,12 @@
 				<a href="checkout_login_4.html" class="btn col-9">Login &rsaquo;</a>
 				<a href="checkout_login_3spaltig.html" class="btn col-9">Login 3spaltig &rsaquo;</a>
 				<a href="checkout_payment.html" class="btn col-9">Zahlungsart &rsaquo;</a>
+			</div>
+		</div>
+		<div class="row index-oferfiew">
+			<div class="col-6">
+				<h2>Shop</h2>
+				<a href="pue_01.html" class="btn col-9">PÜ - 01 &rsaquo;</a>
 			</div>
 		</div>
 
