--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <!-- Ende Suchfeld -->
             <section class="basket col-4">
                 <div>
-                    <a class="cart" href="#">
+                    <a class="cart" href="warenkorb.html">
 	            		<img src="img/icon_cart.svg" alt="Warenkorb">
 	            		<div class="cart-count-wrapper grid-center grid-middle">
 	            			<div class="cart-count">42</div>
