--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 		<style>
 			.index-oferfiew  a {
 				margin:0.5rem;
-				display:block;
+				display:inline-block;
 			}
 		</style>
 		<div class="row">
@@ -177,17 +177,21 @@
 		</div>
 
 		<div class="row index-oferfiew">
-			<div class="col-6">
+			<div class="col-12">
 				<h2>Warenkorb und Checkout</h2>
-				<a href="warenkorb.html" class="btn col-9">Warenkorb &rsaquo;</a>
-				<a href="warenkorb_banner.html" class="btn col-9">Warenkorb mit Banner &rsaquo;</a>
-				<a href="checkout_login.html" class="btn col-9">Login &rsaquo;</a>
-				<a href="checkout_login_1.html" class="btn col-9">Login &rsaquo;</a>
-				<a href="checkout_login_2.html" class="btn col-9">Login &rsaquo;</a>
-				<a href="checkout_login_3.html" class="btn col-9">Login &rsaquo;</a>
-				<a href="checkout_login_4.html" class="btn col-9">Login &rsaquo;</a>
-				<a href="checkout_login_3spaltig.html" class="btn col-9">Login 3spaltig &rsaquo;</a>
-				<a href="checkout_payment.html" class="btn col-9">Zahlungsart &rsaquo;</a>
+				<h3>Warenkorb</h3>
+				<div class="row">
+					<a href="warenkorb.html" class="btn col-4">Warenkorb (Responsive) &rsaquo;</a>
+					<a href="kundentag/warenkorb-mobile.html" class="btn col-3">Warenkorb Mobile (Screenshot) &rsaquo;</a>
+				</div>
+
+				<h3>Produkt-Detail-Seite</h3>
+				<div class="row">
+					<a href="kundentag/pds-desktop.html" class="btn col-3">PDS Desktop (Screenshot) &rsaquo;</a>
+					<a href="kundentag/pds-tablet.html" class="btn col-3">PDS Tablet (Screenshot) &rsaquo;</a>
+					<a href="kundentag/pds-mobile.html" class="btn col-3">PDS Mobile (Screenshot) &rsaquo;</a>
+				</div>
+				<a href="checkout_payment.html" class="btn col-3">Zahlungsart &rsaquo;</a>
 			</div>
 		</div>
 		<div class="row index-oferfiew">
