--- a/index.html
+++ b/index.html
@@ -191,13 +191,17 @@
 					<a href="kundentag/pds-tablet.html" class="btn col-3">PDS Tablet (Screenshot) &rsaquo;</a>
 					<a href="kundentag/pds-mobile.html" class="btn col-3">PDS Mobile (Screenshot) &rsaquo;</a>
 				</div>
-				<a href="checkout_payment.html" class="btn col-3">Zahlungsart &rsaquo;</a>
-			</div>
-		</div>
-		<div class="row index-oferfiew">
-			<div class="col-6">
-				<h2>Shop</h2>
-				<a href="pue_01.html" class="btn col-9">PÜ - 01 &rsaquo;</a>
+				<h3>Produkt-Übersicht-Seite</h3>
+				<div class="row">
+					<a href="pue_01.html" class="btn col-3">PÜ Responsive &rsaquo;</a>
+					<a href="kundentag/pue-mobile.html" class="btn col-3">PÜ Mobile (Screenshot) &rsaquo;</a>
+				</div>
+				<h3>Produkt-Detail-Seite</h3>
+				<div class="row">
+					<a href="kundentag/suggest-desktop.html" class="btn col-3">PDS Desktop (Screenshot) &rsaquo;</a>
+					<a href="kundentag/suggest-tablet.html" class="btn col-3">PDS Tablet (Screenshot) &rsaquo;</a>
+					<a href="kundentag/suggest-mobile.html" class="btn col-3">PDS Mobile (Screenshot) &rsaquo;</a>
+				</div>
 			</div>
 		</div>
 
