--- a/pue_01.html
+++ b/pue_01.html
@@ -476,6 +476,9 @@
 
 				</div>
 			</div>
+            <div style="width:100%; text-align:right;">
+                <img src="img/pue-pagination.png" height="85" width="651" alt="">                
+            </div>
         </div>
 </div>
 
