--- a/index.html
+++ b/index.html
@@ -196,11 +196,11 @@
 					<a href="pue_01.html" class="btn col-3">PÜ Responsive &rsaquo;</a>
 					<a href="kundentag/pue-mobile.html" class="btn col-3">PÜ Mobile (Screenshot) &rsaquo;</a>
 				</div>
-				<h3>Produkt-Detail-Seite</h3>
+				<h3>Suggest-Suche</h3>
 				<div class="row">
-					<a href="kundentag/suggest-desktop.html" class="btn col-3">PDS Desktop (Screenshot) &rsaquo;</a>
-					<a href="kundentag/suggest-tablet.html" class="btn col-3">PDS Tablet (Screenshot) &rsaquo;</a>
-					<a href="kundentag/suggest-mobile.html" class="btn col-3">PDS Mobile (Screenshot) &rsaquo;</a>
+					<a href="kundentag/suggest-desktop.html" class="btn col-3">Suggest Desktop (Screenshot) &rsaquo;</a>
+					<a href="kundentag/suggest-tablet.html" class="btn col-3">Suggest Tablet (Screenshot) &rsaquo;</a>
+					<a href="kundentag/suggest-mobile.html" class="btn col-3">Suggest Mobile (Screenshot) &rsaquo;</a>
 				</div>
 			</div>
 		</div>
